src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Term_End_Date__c</fullName>
        <label>Initial Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Term_Start_Date__c</fullName>
        <label>Initial Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Form_Terms__c</fullName>
        <label>Order Form Terms</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <inlineHelpText>Dummy field for displaying Account Name on Quote Template</inlineHelpText>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_O_Required__c</fullName>
        <label>Will Organization Send PO?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 90</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Terms__c</fullName>
        <label>Renewal Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Billing_address_is_required</fullName>
        <active>true</active>
        <description>This rule makes sure that the Billing Country, State and Postal Code are populated on Quote - This is required as it will be used on Quote Templates</description>
        <errorConditionFormula>OR(ISBLANK(BillingCountry),  ISBLANK( BillingState ),  
AND(ISBLANK(BillingCity),ISBLANK(BillingPostalCode))
)</errorConditionFormula>
        <errorMessage>Incomplete Bill To Address. Please enter State, Country and City/Postal Code.</errorMessage>
    </validationRules>
</CustomObject>